[Feat]: implement run logic for submission service.